fix spacing in window

--- a/messages/messages.css
+++ b/messages/messages.css
@@ -94,15 +94,30 @@
     line-height: 1.231;
     font-weight: bold;
 }
-
-.message_input .ta-scroll-window.form-control blockquote p {
-    display: block;
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
+.message_input .ta-scroll-window.form-control blockquote  * {
+     display: block;
+    -webkit-margin-before: 1em ;
+    -webkit-margin-after: 1em ;
     -webkit-margin-start: 40px;
-    -webkit-margin-end: 40px;
+    -webkit-margin-end: 40px;   
+}
+
+
+.message_input .ta-scroll-window.form-control blockquote p{
     font-size: 14px;
     font-weight: normal;
+}
+
+.message_input .ta-scroll-window.form-control blockquote h1{
+    font-weight: bold;
+}
+
+.message_input .ta-scroll-window.form-control blockquote h2 {
+    font-weight: bold;
+}
+
+.message_input .ta-scroll-window.form-control blockquote h3 {
+    font-weight: bold;
 }
 
 .message_input .ta-scroll-window.form-control ul {
@@ -163,6 +178,8 @@
 .msgText a {
   color: #15c !important;
 }
+
+/*.msgText blockquote */
 
 .message_input .btn-toolbar{
     margin-top: 0px;
